--- a/css/main.css
+++ b/css/main.css
@@ -1,73 +1,9 @@
-@-webkit-keyframes sidebar-small {
-  from {
-    width: 300px;
-  }
-  to {
-    width: 100px;
-  }
-}
-@-moz-keyframes sidebar-small {
-  from {
-    width: 300px;
-  }
-  to {
-    width: 100px;
-  }
-}
-@-ms-keyframes sidebar-small {
-  from {
-    width: 300px;
-  }
-  to {
-    width: 100px;
-  }
-}
-@-o-keyframes sidebar-small {
-  from {
-    width: 300px;
-  }
-  to {
-    width: 100px;
-  }
-}
 @keyframes sidebar-small {
   from {
     width: 300px;
   }
   to {
     width: 100px;
-  }
-}
-@-webkit-keyframes sidebar-large {
-  from {
-    width: 100px;
-  }
-  to {
-    width: 300px;
-  }
-}
-@-moz-keyframes sidebar-large {
-  from {
-    width: 100px;
-  }
-  to {
-    width: 300px;
-  }
-}
-@-ms-keyframes sidebar-large {
-  from {
-    width: 100px;
-  }
-  to {
-    width: 300px;
-  }
-}
-@-o-keyframes sidebar-large {
-  from {
-    width: 100px;
-  }
-  to {
-    width: 300px;
   }
 }
 @keyframes sidebar-large {
@@ -78,76 +14,12 @@
     width: 300px;
   }
 }
-@-webkit-keyframes arrow-left {
-  from {
-    transform: rotate(180deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
-}
-@-moz-keyframes arrow-left {
-  from {
-    transform: rotate(180deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
-}
-@-ms-keyframes arrow-left {
-  from {
-    transform: rotate(180deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
-}
-@-o-keyframes arrow-left {
-  from {
-    transform: rotate(180deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
-}
 @keyframes arrow-left {
   from {
     transform: rotate(180deg);
   }
   to {
     transform: rotate(0deg);
-  }
-}
-@-webkit-keyframes arrow-right {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(180deg);
-  }
-}
-@-moz-keyframes arrow-right {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(180deg);
-  }
-}
-@-ms-keyframes arrow-right {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(180deg);
-  }
-}
-@-o-keyframes arrow-right {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(180deg);
   }
 }
 @keyframes arrow-right {
@@ -164,27 +36,35 @@
   height: 100%;
   margin: 0;
 }
+.logo {
+  background-image: url(/skull-col.png);
+  background-size: 100%;
+  width: 100px;
+  height: 100px;
+}
 .btn {
   padding: 8px 12px;
-  float: left;
   border-radius: 6%;
   cursor: pointer;
-  background-color: #c50;
-  color: #fff;
-  border: 1px solid #fff;
+  background-image: linear-gradient(to bottom right, #e7e7e7, #d4d4d4);
+  color: #000000;
+  border: 1px solid #000000;
 }
 .btn__active {
-  background-color: #fff;
-  color: #000;
-  border: 1px solid #000;
+  background-image: linear-gradient(to bottom right, #cd798f, #b35c73);
+  color: #ffffff;
+}
+.btn:hover {
+  background-image: linear-gradient(to bottom right, #d0b664, #b69e54);
+  color: #000000;
 }
 .sidebar {
-  background-color: #c50;
-  color: #fff;
+  background-color: #636363;
+  color: #ffffff;
   height: 100%;
   align-items: center;
   justify-items: center;
-  font-size: 36px;
+  font-size: 16px;
   display: grid;
 }
 .sidebar__left {
@@ -213,16 +93,15 @@
   margin: 0;
 }
 .sidebar--tool_list {
-  width: 80%;
+  width: 100%;
+  display: grid;
+  justify-items: center;
 }
 .sidebar--tool_list--tool {
   width: 70%;
 }
 .sidebar--tool_list--tool--icon {
   margin-right: 20px;
-}
-.sidebar--tool_list--tool:hover {
-  background-color: #a30;
 }
 .sidebar.sidebar__large {
   animation-name: sidebar-large;
@@ -244,6 +123,7 @@
   position: absolute;
   top: 50%;
   margin-left: 20px;
+  cursor: pointer;
 }
 .sidebar--arrow__right {
   animation-name: arrow-right;
