--- a/less/main.less
+++ b/less/main.less
@@ -118,6 +118,12 @@
       width: 250px;
       padding: 0;
       margin: 0;
+      &-lineWidth {
+        width: 220px;
+      }
+      &-fontSize {
+        width: 60px;
+      }
     }
   }
   &--tool_list {
