--- a/css/main.css
+++ b/css/main.css
@@ -30,21 +30,101 @@
     transform: rotate(180deg);
   }
 }
+.nav {
+  grid-column: 1 / 3;
+  width: 100%;
+  height: 100%;
+  background-color: #636363;
+  color: #ffffff;
+  display: grid;
+  grid-template-columns: 300px 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  align-items: center;
+  justify-items: center;
+}
+.nav--container {
+  display: grid;
+  align-items: center;
+  grid-template-columns: repeat(3, 1fr);
+}
+.nav--container-split {
+  grid-template-columns: repeat(6, 1fr);
+}
+.nav--container--input--lable {
+  width: 80px;
+  margin: 5px;
+}
+.nav--container--input--fill {
+  width: 32px;
+  height: 32px;
+  margin: 5px;
+  border-radius: 6px;
+  border: 3px solid #e7e7e7;
+}
+.nav--container--input--fill-filled {
+  background-color: #e7e7e7;
+}
+.nav--container--input--color {
+  width: 32px;
+  height: 32px;
+  margin: 5px;
+  border-radius: 6px;
+}
+.nav--container--input--color-active {
+  border: 3px solid #e7e7e7;
+}
+.nav--container--input--color-black {
+  background-color: #000000;
+}
+.nav--container--input--color-red {
+  background-color: #FF0000;
+}
+.nav--container--input--color-yellow {
+  background-color: #FFFF00;
+}
+.nav--container--input--color-green {
+  background-color: #008000;
+}
+.nav--container--input--color-blue {
+  background-color: #0000FF;
+}
+.nav--container--input--color-orange {
+  background-color: #cc5500;
+}
+input[type="color"] {
+  padding: 0;
+  border: none;
+}
+input[type="color"]::-webkit-color-swatch-wrapper {
+  padding: 0;
+}
+input[type="color"]::-webkit-color-swatch {
+  border: none;
+}
 .body {
   display: grid;
-  grid-template-columns: 300px 1fr 100px;
+  grid-template-rows: 80px 1fr;
+  grid-template-columns: 300px 1fr;
+  align-items: center;
+  justify-items: center;
+  background-color: #e7e7e7;
   height: 100%;
   margin: 0;
 }
+.canvas--container {
+  background-color: white;
+  box-shadow: 0 0 16px rgba(33, 33, 33, 0.9);
+}
 .logo {
-  background-image: url(/skull-col.png);
+  background-image: url(/assets/skull-col.png);
   background-size: 100%;
   width: 100px;
   height: 100px;
 }
 .btn {
   padding: 8px 12px;
-  border-radius: 6%;
+  border-radius: 6px;
+  box-sizing: border-box;
   cursor: pointer;
   background-image: linear-gradient(to bottom right, #e7e7e7, #d4d4d4);
   color: #000000;
@@ -62,6 +142,7 @@
   background-color: #636363;
   color: #ffffff;
   height: 100%;
+  width: 100%;
   align-items: center;
   justify-items: center;
   font-size: 16px;
