--- a/less/main.less
+++ b/less/main.less
@@ -44,15 +44,100 @@
   }
 }
 
+.nav{
+  grid-column: 1 e('/') 3;
+  width: 100%;
+  height: 100%;
+  background-color: @dark-color;
+  color: contrast(@dark-color);
+  display: grid;
+  grid-template-columns: 300px 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  align-items: center;
+  justify-items: center;
+  &--container{
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(3, 1fr);
+    &-split{
+      grid-template-columns: repeat(6, 1fr);
+    }
+    &--input{
+      &--lable {
+        width: 80px;
+        margin: 5px;
+      }
+      &--fill{
+        width: 32px;
+        height: 32px;
+        margin: 5px;
+        border-radius: 6px;
+        border: 3px solid @main-color;
+        &-filled{
+          background-color: @main-color;
+        }
+      }
+      &--color{
+        width: 32px;
+        height: 32px;
+        margin: 5px;
+        border-radius: 6px;
+        &-active{
+          border: 3px solid @main-color;
+        }
+        &-black{
+          background-color: #000000
+        }
+        &-red{
+          background-color: #FF0000
+        }
+        &-yellow{
+          background-color: #FFFF00
+        }
+        &-green{
+          background-color: #008000
+        }
+        &-blue{
+          background-color: #0000FF
+        }
+        &-orange{
+          background-color: #cc5500
+        }
+      }
+    }
+  }
+}
+
+//Remove styleing from input type color
+input[type="color"] {
+  padding: 0;
+  border: none;
+}
+input[type="color"]::-webkit-color-swatch-wrapper {
+	padding: 0;
+}
+input[type="color"]::-webkit-color-swatch {
+	border: none;
+}
+
 .body {
   display: grid;
-  grid-template-columns: 300px 1fr 100px;
+  grid-template-rows: 80px 1fr;
+  grid-template-columns: 300px 1fr;
+  align-items: center;
+  justify-items: center;
+  background-color: @main-color;
   height: 100%;
   margin: 0;
 }
 
+.canvas--container{
+  background-color: white;
+  box-shadow: 0 0 16px rgba(33,33,33,.9); 
+}
+
 .logo {
-  background-image: url(/skull-col.png);
+  background-image: url(/assets/skull-col.png);
   background-size: 100%;
   width: 100px;
   height: 100px;
@@ -60,7 +145,9 @@
 
 .btn {
   padding: 8px 12px;
-  border-radius: 6%;
+  border-radius: 6px;
+  box-sizing: border-box;
+  // box-shadow: 0 0 6px rgba(33,33,33,.9); 
   cursor: pointer;
   background-image: linear-gradient(
     to bottom right,
@@ -90,7 +177,9 @@
 .sidebar {
   background-color: @dark-color;
   color: contrast(@dark-color);
+  // box-shadow: 0 0 12px rgba(33,33,33,.9); 
   height: 100%;
+  width: 100%;
   align-items: center;
   justify-items: center;
   font-size: 16px;
