--- a/less/main.less
+++ b/less/main.less
@@ -44,8 +44,8 @@
   }
 }
 
-.nav{
-  grid-column: 1 e('/') 3;
+.nav {
+  grid-column: 1 e("/") 3;
   width: 100%;
   height: 100%;
   background-color: @dark-color;
@@ -55,53 +55,63 @@
   grid-template-rows: 1fr;
   align-items: center;
   justify-items: center;
-  &--container{
+  &--container {
     display: grid;
     align-items: center;
     grid-template-columns: repeat(3, 1fr);
-    &-split{
-      grid-template-columns: repeat(6, 1fr);
+    &-four {
+      grid-template-columns: repeat(4, 1fr);
     }
-    &--input{
+    &-seven {
+      grid-template-columns: repeat(7, 1fr);
+    }
+    &--input {
+      cursor: pointer;
+      margin: 5px;
+      &--number {
+        width: 60px;
+      }
       &--lable {
         width: 80px;
-        margin: 5px;
       }
-      &--fill{
+      &--fill {
         width: 32px;
         height: 32px;
-        margin: 5px;
         border-radius: 6px;
         border: 3px solid @main-color;
-        &-filled{
+        &-filled {
           background-color: @main-color;
         }
       }
-      &--color{
+      &--customColor {
         width: 32px;
         height: 32px;
-        margin: 5px;
         border-radius: 6px;
-        &-active{
+      }
+      &--color {
+        width: 32px;
+        height: 32px;
+        border-radius: 6px;
+        &-active {
           border: 3px solid @main-color;
         }
-        &-black{
-          background-color: #000000
+        &-black {
+          background-color: #000000;
         }
-        &-red{
-          background-color: #FF0000
+        &-red {
+          background-color: #ff0000;
         }
-        &-yellow{
-          background-color: #FFFF00
+        &-yellow {
+          background-color: #ffff00;
         }
-        &-green{
-          background-color: #008000
+        &-green {
+          background-color: #008000;
         }
-        &-blue{
-          background-color: #0000FF
+        &-blue {
+          background-color: #0000ff;
         }
-        &-orange{
-          background-color: #cc5500
+        &-orange {
+          background-color: #cc5500;
         }
       }
     }
@@ -113,16 +123,19 @@ input[type="color"] {
   padding: 0;
   border: none;
 }
+input[type="color"].nav--container--input--color-active {
+  border: 3px solid @main-color;
+}
 input[type="color"]::-webkit-color-swatch-wrapper {
-	padding: 0;
+  padding: 0;
 }
 input[type="color"]::-webkit-color-swatch {
-	border: none;
+  border: none;
 }
 
 .body {
   display: grid;
-  grid-template-rows: 80px 1fr;
+  grid-template-rows: 150px 1fr;
   grid-template-columns: 300px 1fr;
   align-items: center;
   justify-items: center;
@@ -131,9 +144,9 @@ input[type="color"]::-webkit-color-swatch {
   margin: 0;
 }
 
-.canvas--container{
+.canvas--container {
   background-color: white;
-  box-shadow: 0 0 16px rgba(33,33,33,.9); 
+  box-shadow: 0 0 16px rgba(33, 33, 33, 0.9);
 }
 
 .logo {
@@ -141,13 +154,14 @@ input[type="color"]::-webkit-color-swatch {
   background-size: 100%;
   width: 100px;
   height: 100px;
+  margin-top: 30px;
 }
 
 .btn {
   padding: 8px 12px;
   border-radius: 6px;
   box-sizing: border-box;
-  // box-shadow: 0 0 6px rgba(33,33,33,.9); 
+  // box-shadow: 0 0 6px rgba(33,33,33,.9);
   cursor: pointer;
   background-image: linear-gradient(
     to bottom right,
@@ -177,7 +191,7 @@ input[type="color"]::-webkit-color-swatch {
 .sidebar {
   background-color: @dark-color;
   color: contrast(@dark-color);
-  // box-shadow: 0 0 12px rgba(33,33,33,.9); 
+  // box-shadow: 0 0 12px rgba(33,33,33,.9);
   height: 100%;
   width: 100%;
   align-items: center;
@@ -185,6 +199,7 @@ input[type="color"]::-webkit-color-swatch {
   font-size: 16px;
   display: grid;
   &__left {
+    grid-row: 1 e("/") 5;
     grid-template-rows: 2fr 1fr;
   }
   &__right {
@@ -204,6 +219,7 @@ input[type="color"]::-webkit-color-swatch {
     width: 250px;
     float: left;
     &--input {
+      cursor: pointer;
       width: 250px;
       padding: 0;
       margin: 0;
