--- a/css/main.css
+++ b/css/main.css
@@ -30,11 +30,87 @@
     transform: rotate(180deg);
   }
 }
+input[type="color"] {
+  padding: 0;
+  border: none;
+}
+input[type="color"].nav--container--input--color-active {
+  border: 3px solid #e7e7e7;
+}
+input[type="color"]::-webkit-color-swatch-wrapper {
+  padding: 0;
+}
+input[type="color"]::-webkit-color-swatch {
+  border: none;
+}
+input[type="text"] {
+  border: 1px solid #000;
+  border-radius: 6px;
+  outline: none;
+  padding: 5px;
+  box-sizing: border-box;
+}
+input[type="text"]:hover {
+  border-color: #d0b664;
+  box-shadow: 0 0 8px 0 #d0b664;
+}
 select {
-  border: solid 1px #505050;
+  border: 1px solid #000;
   border-radius: 6px;
   padding: 5px;
-  margin-left: 32px;
+}
+select:hover {
+  border-color: #d0b664;
+  box-shadow: 0 0 8px 0 #d0b664;
+}
+input[type="number"]:hover {
+  border-color: #d0b664;
+  box-shadow: 0 0 8px 0 #d0b664;
+}
+input[type="number"] {
+  border: 1px solid #000;
+  border-radius: 6px;
+  padding: 5px;
+}
+.body {
+  display: grid;
+  grid-template-rows: 150px 1fr;
+  grid-template-columns: 300px 1fr;
+  align-items: center;
+  justify-items: center;
+  background-color: #e7e7e7;
+  height: 100%;
+  margin: 0;
+}
+.canvas--container {
+  background-color: #fff;
+  box-shadow: 0 0 8px 0 rgba(33, 33, 33, 0.9);
+  align-self: flex-start;
+  justify-self: flex-start;
+}
+.logo {
+  background-image: url(/assets/skull-col.png);
+  background-size: 100%;
+  width: 100px;
+  height: 100px;
+  margin-top: 30px;
+}
+.btn {
+  padding: 8px 12px;
+  border-radius: 6px;
+  box-sizing: border-box;
+  cursor: pointer;
+  background-image: linear-gradient(to bottom right, #e7e7e7, #d4d4d4);
+  color: #000000;
+  border: 1px solid #000;
+}
+.btn__active {
+  background-image: linear-gradient(to bottom right, #cd798f, #b35c73);
+  color: #ffffff;
+}
+.btn:hover {
+  background-image: linear-gradient(to bottom right, #d0b664, #b69e54);
+  color: #000000;
 }
 .nav {
   grid-column: 1 / 3;
@@ -109,59 +185,6 @@ select {
 .nav--container--input--color-orange {
   background-color: #cc5500;
 }
-input[type="color"] {
-  padding: 0;
-  border: none;
-}
-input[type="color"].nav--container--input--color-active {
-  border: 3px solid #e7e7e7;
-}
-input[type="color"]::-webkit-color-swatch-wrapper {
-  padding: 0;
-}
-input[type="color"]::-webkit-color-swatch {
-  border: none;
-}
-.body {
-  display: grid;
-  grid-template-rows: 150px 1fr;
-  grid-template-columns: 300px 1fr;
-  align-items: center;
-  justify-items: center;
-  background-color: #e7e7e7;
-  height: 100%;
-  margin: 0;
-}
-.canvas--container {
-  background-color: white;
-  box-shadow: 0 0 16px rgba(33, 33, 33, 0.9);
-  align-self: flex-start;
-  justify-self: flex-start;
-}
-.logo {
-  background-image: url(/assets/skull-col.png);
-  background-size: 100%;
-  width: 100px;
-  height: 100px;
-  margin-top: 30px;
-}
-.btn {
-  padding: 8px 12px;
-  border-radius: 6px;
-  box-sizing: border-box;
-  cursor: pointer;
-  background-image: linear-gradient(to bottom right, #e7e7e7, #d4d4d4);
-  color: #000000;
-  border: 1px solid #000000;
-}
-.btn__active {
-  background-image: linear-gradient(to bottom right, #cd798f, #b35c73);
-  color: #ffffff;
-}
-.btn:hover {
-  background-image: linear-gradient(to bottom right, #d0b664, #b69e54);
-  color: #000000;
-}
 .sidebar {
   background-color: #636363;
   color: #ffffff;
@@ -180,21 +203,37 @@ input[type="color"]::-webkit-color-swatch {
   width: 100%;
   display: grid;
   justify-items: center;
+  align-items: end;
   grid-gap: 10px;
+}
+.sidebar--toolList-highlight {
+  background-color: #d4d4d4;
+  color: #000000;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-radius: 6px;
 }
 .sidebar--toolList-bottom {
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  align-items: center;
 }
 .sidebar--toolList--tool {
-  width: 70%;
+  min-width: 65%;
+  max-width: 65%;
   cursor: pointer;
 }
-.sidebar--toolList--tool-save {
-  grid-column: 1 / 3;
-  width: 70%;
+.sidebar--toolList--tool-undo {
+  text-align: end;
 }
-.sidebar--toolList--tool--icon {
+.sidebar--toolList--tool-text {
+  width: 65%;
+}
+.sidebar--toolList--tool-number {
+  border-radius: 6px;
+  padding: 5px;
+}
+.sidebar--toolList--tool-icon {
   margin-right: 20px;
+}
+.sidebar .hidden {
+  visibility: hidden;
 }
