--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,7 @@ input[type="text"] {
   border: 1px solid #000;
   border-radius: 6px;
   outline: none;
-  padding: 5px;
+  padding: 8px;
   box-sizing: border-box;
 }
 input[type="text"]:hover {
@@ -57,7 +57,7 @@ input[type="text"]:hover {
 select {
   border: 1px solid #000;
   border-radius: 6px;
-  padding: 5px;
+  padding: 8px;
 }
 select:hover {
   border-color: #d0b664;
@@ -70,12 +70,12 @@ input[type="number"]:hover {
 input[type="number"] {
   border: 1px solid #000;
   border-radius: 6px;
-  padding: 5px;
+  padding: 8px;
 }
 .body {
   display: grid;
-  grid-template-rows: 150px 1fr;
-  grid-template-columns: 300px 1fr;
+  grid-template-rows: 140px 1fr;
+  grid-template-columns: 270px 1fr;
   align-items: center;
   justify-items: center;
   background-color: #e7e7e7;
@@ -96,7 +96,7 @@ input[type="number"] {
   margin-top: 30px;
 }
 .btn {
-  padding: 8px 12px;
+  padding: 8px;
   border-radius: 6px;
   box-sizing: border-box;
   cursor: pointer;
@@ -134,6 +134,11 @@ input[type="number"] {
 }
 .nav--container-seven {
   grid-template-columns: repeat(7, 1fr);
+}
+.nav--container--tool {
+  cursor: pointer;
+  text-align: center;
+  font-size: 2em;
 }
 .nav--container--input {
   cursor: pointer;
@@ -197,7 +202,6 @@ input[type="number"] {
 }
 .sidebar--left {
   grid-row: 2 / 5;
-  grid-template-rows: 3fr 2fr;
 }
 .sidebar--toolList {
   width: 100%;
@@ -207,6 +211,7 @@ input[type="number"] {
   grid-gap: 10px;
 }
 .sidebar--toolList-highlight {
+  z-index: 1;
   background-color: #d4d4d4;
   color: #000000;
   padding-top: 20px;
@@ -214,22 +219,24 @@ input[type="number"] {
   border-radius: 6px;
 }
 .sidebar--toolList-bottom {
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
+}
+.sidebar--toolList-bottom .sidebar--toolList--tool:nth-child(odd) {
+  justify-self: end;
+  max-width: 90%;
+  width: 90%;
 }
 .sidebar--toolList--tool {
   min-width: 65%;
   max-width: 65%;
   cursor: pointer;
 }
-.sidebar--toolList--tool-undo {
-  text-align: end;
-}
 .sidebar--toolList--tool-text {
   width: 65%;
 }
 .sidebar--toolList--tool-number {
   border-radius: 6px;
-  padding: 5px;
+  padding: 8px;
 }
 .sidebar--toolList--tool-icon {
   margin-right: 20px;
