--- a/css/main.css
+++ b/css/main.css
@@ -1,35 +1,3 @@
-@keyframes sidebar-small {
-  from {
-    width: 300px;
-  }
-  to {
-    width: 100px;
-  }
-}
-@keyframes sidebar-large {
-  from {
-    width: 100px;
-  }
-  to {
-    width: 300px;
-  }
-}
-@keyframes arrow-left {
-  from {
-    transform: rotate(180deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
-}
-@keyframes arrow-right {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(180deg);
-  }
-}
 input[type="color"] {
   padding: 0;
   border: none;
@@ -73,6 +41,7 @@ input[type="number"] {
   padding: 8px;
 }
 .inputNumber {
+  color: #000;
   display: inline-block;
   position: relative;
 }
@@ -135,6 +104,8 @@ input[type="number"] {
   background-color: #636363;
   color: #ffffff;
   display: grid;
+  grid-gap: 10px;
+  grid-row-gap: 10px;
   grid-template-columns: 300px 1fr 1fr 1fr;
   grid-template-rows: 1fr;
   align-items: center;
@@ -142,14 +113,16 @@ input[type="number"] {
 }
 .nav--container {
   display: grid;
+  grid-gap: 10px;
+  grid-row-gap: 10px;
   align-items: center;
   grid-template-columns: repeat(3, 1fr);
 }
+.nav--container-two {
+  grid-template-columns: repeat(2, 1fr);
+}
 .nav--container-four {
   grid-template-columns: repeat(4, 1fr);
-}
-.nav--container-seven {
-  grid-template-columns: repeat(7, 1fr);
 }
 .nav--container--tool {
   cursor: pointer;
@@ -158,7 +131,6 @@ input[type="number"] {
 }
 .nav--container--input {
   cursor: pointer;
-  margin: 5px;
 }
 .nav--container--input--number {
   width: 60px;
